--- a/pallets/collator-selection/Cargo.toml
+++ b/pallets/collator-selection/Cargo.toml
@@ -16,25 +16,25 @@ targets = ['x86_64-unknown-linux-gnu']
 log = { version = "0.4.0", default-features = false }
 codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
 serde = { version = "1.0.119", default-features = false }
-sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "master" }
-sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "master" }
-sp-staking = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "master" }
-frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "master" }
-frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "master" }
-pallet-authorship = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "master" }
-pallet-session = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "master" }
+sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+sp-staking = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+pallet-authorship = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+pallet-session = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
 
-frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate', branch = "master" }
+frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
 
 [dev-dependencies]
-sp-core = { git = 'https://github.com/paritytech/substrate', branch = "master" }
-sp-io = { git = 'https://github.com/paritytech/substrate', branch = "master" }
-sp-tracing = { git = 'https://github.com/paritytech/substrate', branch = "master" }
-sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "master" }
-pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "master" }
-sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "master" }
-pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = "master" }
-pallet-aura = { git = 'https://github.com/paritytech/substrate', branch = "master" }
+sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+sp-io = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+sp-tracing = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
+pallet-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.10" }
 
 [features]
 default = ['std']
